--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <script src="js/script.js"> defer</script>
+    <script src="js/script.js" defer></script>
+    
 </head>
 <body>
-    <button>Rock</button>
-    <button>Paper</button>
-    <button>Scissors</button>
+    <button data-choice="rock" class="choice">Rock</button>
+    <button data-choice="paper" class="choice">Paper</button>
+    <button data-choice="scissors" class="choice">Scissors</button>
+    
 </body>
 </html>
