get playerchoice and computerchoice

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     
 </head>
 <body>
-    <button data-choice="rock" class="choice">Rock</button>
-    <button data-choice="paper" class="choice">Paper</button>
-    <button data-choice="scissors" class="choice">Scissors</button>
+    <button class="choice">Rock</button>
+    <button class="choice">Paper</button>
+    <button class="choice">Scissors</button>
     
 </body>
 </html>
