add score system

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     
 </head>
 <body>
+    <div>Make your choice, first to 5 wins.</div>
     <button class="choice">Rock</button>
     <button class="choice">Paper</button>
     <button class="choice">Scissors</button>
